# team_playbook

./: AGENTS.md  CLAUDE.md  README.md  SKILLS.md  pyproject.toml
config/: agents.json  skills.json  workflows.json
docs/: TEAM_WORKFLOWS.md
notebooks/: team_playbook.ipynb
scripts/: run_demo.py
src/team_playbook/: __init__.py  agents.py  cli.py  mcp.py  models.py  orchestrator.py  registry.py
